# luckypot

./: .gitignore  pyproject.toml  readme.md  sunset.py
engine/: __init__.py  app.py  assets.py  gfx.py  object.py  particles.py  screen.py  state_machine.py  utils.py
examples/: sunset.py
luckypot/: __init__.py  app.py  assets.py  common_objects.py  constants.py  debug.py  gfx.py  object.py  particles.py  pygame_input.py  screen.py  settings.py  simple_ui.py  state.py  state_machine.py  state_transitions.py  utils.py
luckypot/examples/: __main__.py  sunset.py
luckypot/examples/assets/animations/: bird.json
