[tool.poetry]
name = "luckypot"
version = "0.1.0"
description = "Another pygame engine. It might be what you need, if you're lucky to be called Diego."
authors = ["ddorn <diego.dorn@free.fr>"]
license = "GPL-3.0"
packages = [
    { include = "luckypot" },
    { include = "luckypot.examples" }
]

include = [
    "assets/",
    "luckypot/examples/",
]


[tool.poetry.dependencies]
python = "^3.8"
pygame-ce = "^2.3.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
